Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11798

cur_grant goes to 0 and never increases with 2.8 client and 2.10 server

Details

    • Bug
    • Resolution: Fixed
    • Major
    • Lustre 2.13.0, Lustre 2.12.1
    • Lustre 2.8.0, Lustre 2.10.5
    • client:
      lustre-2.8.2_5.chaos-1.ch6.x86_64

      servers:
      zfs-0.7.11-4llnl.ch6.x86_64
      lustre-2.10.5_2.chaos-3.ch6.x86_64
    • 3
    • 9223372036854775807

    Description

      The Lustre 2.10.5 / zfs 0.7.11 OST is not allocating grant to the clients.

      I set +cache debug flag on both client and server.

      On the client, under /proc/fs/lustre/osc/lustre3-OST....:
      cur_dirty_bytes == 0
      cur_grant_bytes starts out as 2097152

      I then issue
      dd if=/dev/urandom of=/p/lustre3/foo/toss-4377/ost0/test.10M bs=5K count=2000

      cur_grant_bytes goes down, and never up, as writes to the OST occur. Eventually it reaches 0 and then stays == 0.

      There is no connection issue - no log messages indicating connections lost/reconnects, and osc/lustre3-OSTXXXX.*/state has "current_state: FULL" for all OSTs.

      Attachments

        1. toss-4377.catalyst107.dec13.tgz
          353 kB
        2. toss-4377.ost0.dec13.tar.gz
          136 kB
        3. p0
          0.9 kB

        Issue Links

          Activity

            People

              bzzz Alex Zhuravlev
              ofaaland Olaf Faaland
              Votes:
              0 Vote for this issue
              Watchers:
              11 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: