LU-11798 grant: prevent overflow of o_undirty

tgt_grant_inflate() returns a u64, and if tgd_blockbits and val are
large enough, can return a value >= 2^32.  tgt_grant_incoming()
assigns oa->o_undirty the returned value.  Since o_undirty is u32, it
can overflow.

This occurs with Lustre clients < 2.10 and a ZFS backend when the zfs
"recordsize" > 128k (the default).

In tgt_grant_inflate(), check the returned value and prevent o_undirty
from being assigned a value greater than 2^30.

Patch by Alex Zhurvalev attached as p0 to lu-11798, commit message by
Olaf Faaland.

Cherry-picked from https://review.whamcloud.com/#/c/33948/ version 1.

Change-Id: I75b9065a524238df2d582e640418fdfa2f1e9a72
Signed-off-by: Olaf Faaland <faaland1@llnl.gov>